# the-last-plex-plugin

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.github/workflows/: autotag.yml  docker.yml
docs/: yt-dlp-json-reference.md
legacy/: README.md
legacy/youtube-as-movies-agent.bundle/Contents/: _collection_map.json
legacy/youtube-as-movies-agent.bundle/Contents/Code/: __init__.py
provider/: Dockerfile  app.py  collection_map.py  docker-compose.yml  metadata.py  pyproject.toml
provider/tests/: test_app.py  test_collection_map.py  test_metadata.py
provider/tests/fixtures/: sample.info.json
provider/ui/: biome.json  index.html  package-lock.json  package.json  vite.config.js
provider/ui/src/: App.css  App.jsx  Collections.jsx  DiscoverPanel.jsx  UnmatchedTags.jsx  VideoList.jsx
youtube-as-movies-agent.bundle/: README.md
youtube-as-movies-agent.bundle/Contents/: Info.plist  _collection_map.json
youtube-as-movies-agent.bundle/Contents/Code/: __init__.py
